--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
+@font-face {
+    font-family: "OpenSans";
+    src: url(./fonts/OpenSans-Regular.ttf);
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "OpenSans";
+}
+
 
