add style priority

--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ header {
 .priority__card {
     display: flex;
     align-items: flex-start;
+    width: 359px;
+    height: 109px;
 }
 .priority__card_icon {
     width: 13px;
